--- a/public/index.html
+++ b/public/index.html
@@ -17,32 +17,36 @@
         <svg viewBox="0 0 24 24" fill="currentColor">
           <path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"/>
         </svg>
-        <h1 data-i18n="app.title">NeurA Research</h1>
+        <h1>
+          <span id="module-name" data-i18n="app.title">NeurA Research</span>
+          <span id="version-badge" class="version-badge">...</span>
+        </h1>
       </a>
 
       <div class="header-actions">
         <a href="/history.html" class="btn btn-secondary btn-sm" data-i18n="header.history">История</a>
 
-        <!-- Balance Widget -->
-        <div class="balance-widget">
-          <button id="balance-trigger" class="balance-trigger">
-            <svg viewBox="0 0 24 24">
-              <path d="M21 18v1c0 1.1-.9 2-2 2H5c-1.11 0-2-.9-2-2V5c0-1.1.89-2 2-2h14c1.1 0 2 .9 2 2v1h-9c-1.11 0-2 .9-2 2v8c0 1.1.89 2 2 2h9zm-9-2h10V8H12v8zm4-2.5c-.83 0-1.5-.67-1.5-1.5s.67-1.5 1.5-1.5 1.5.67 1.5 1.5-.67 1.5-1.5 1.5z"/>
+        <!-- Balance Widget (Standard) -->
+        <div class="balance-popover-wrapper">
+          <button type="button" id="balance-toggle" class="balance-toggle" data-i18n-title="header.balanceTitle" title="Показать баланс">
+            <svg viewBox="0 0 24 24" aria-hidden="true" focusable="false">
+              <path d="M4.75 7.5h14.5a1.75 1.75 0 0 1 1.75 1.75v6.5A1.75 1.75 0 0 1 19.25 17.5H4.75A1.75 1.75 0 0 1 3 15.75v-6.5A1.75 1.75 0 0 1 4.75 7.5Zm0 0V6.25A2.25 2.25 0 0 1 7 4h7.5" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M7.5 13.25h3" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" />
             </svg>
-            <span data-i18n="header.balance">Баланс</span>
           </button>
-
-          <div id="balance-popover" class="balance-popover">
-            <div class="balance-popover-header">
-              <h3 data-i18n="balance.title">Ваш баланс</h3>
-              <button id="balance-close" class="balance-popover-close">×</button>
+          <div id="balance-popover" class="balance-popover" hidden>
+            <div class="balance-popover__header">
+              <span class="balance-popover__title" data-i18n="balance.title">Баланс</span>
+              <button type="button" class="balance-popover__close" id="balance-close">&times;</button>
             </div>
-            <div class="balance-popover-body">
-              <div id="balance-amount" class="balance-amount" data-i18n="balance.loading">Загрузка...</div>
-              <div class="balance-actions">
-                <button id="refresh-balance" class="btn btn-secondary btn-sm" data-i18n="balance.refresh">Обновить</button>
-                <a id="topup-btn" href="#" class="btn btn-primary btn-sm hidden" target="_blank" data-i18n="balance.topup">Пополнить</a>
-              </div>
+            <div class="balance-popover__value">
+              <span id="balance-value">--</span>
+              <span id="balance-currency" data-i18n="balance.credits">кредитов</span>
+            </div>
+            <p class="balance-popover__updated" id="balance-updated" data-i18n="balance.updatedAt">Обновлено: --:--</p>
+            <div class="balance-popover__actions">
+              <button type="button" id="balance-refresh" data-i18n="balance.refresh">Обновить</button>
+              <a href="#" id="balance-topup" class="balance-popover__topup" data-i18n="balance.topup">Пополнить</a>
             </div>
           </div>
         </div>
@@ -64,29 +68,38 @@
                 id="query-input"
                 class="form-control"
                 data-i18n-placeholder="research.queryPlaceholder"
-                placeholder="Введите вопрос или тему для исследования..."
+                placeholder="Опишите тему или вопрос максимально подробно: укажите контекст, ограничения, желаемую глубину анализа. Чем конкретнее запрос — тем качественнее результат."
                 required
               ></textarea>
+              <p class="form-hint" data-i18n="research.queryHint">Например: «Сравните эффективность солнечных и ветровых электростанций в условиях Северной Европы за 2020-2025 гг.»</p>
             </div>
 
             <div class="options-grid">
               <div class="option-select">
-                <label for="mode-select" data-i18n="research.options.mode">Режим</label>
+                <label for="mode-select">
+                  <span data-i18n="research.options.mode">Режим</span>
+                  <span class="info-icon" data-i18n-title="research.options.modeHelp" title="Режим влияет на глубину и скорость исследования">?</span>
+                </label>
                 <select id="mode-select" class="form-control">
                   <option value="standard" data-i18n="research.options.modeStandard">Стандартный</option>
                   <option value="deep" data-i18n="research.options.modeDeep">Глубокий</option>
                   <option value="quick" data-i18n="research.options.modeQuick">Быстрый</option>
                 </select>
+                <p class="option-hint" data-i18n="research.options.modeHint">Стандартный — оптимальный баланс. Глубокий — максимум источников и проверок. Быстрый — краткий ответ за минуту.</p>
               </div>
 
               <div class="option-select">
-                <label for="type-select" data-i18n="research.options.type">Тип</label>
+                <label for="type-select">
+                  <span data-i18n="research.options.type">Тип</span>
+                  <span class="info-icon" data-i18n-title="research.options.typeHelp" title="Тип определяет формат и структуру отчёта">?</span>
+                </label>
                 <select id="type-select" class="form-control">
                   <option value="facts_and_analysis" data-i18n="research.options.typeFactsAndAnalysis">Факты и анализ</option>
                   <option value="comparison" data-i18n="research.options.typeComparison">Сравнение</option>
                   <option value="trends" data-i18n="research.options.typeTrends">Тренды</option>
                   <option value="how_to" data-i18n="research.options.typeHowTo">Инструкция</option>
                 </select>
+                <p class="option-hint" data-i18n="research.options.typeHint">Факты — обзор с выводами. Сравнение — таблица «за/против». Тренды — динамика и прогнозы. Инструкция — пошаговое руководство.</p>
               </div>
 
               <div class="option-select">
