fix: добавлен debug logging для баланса, исправлен путь history.html

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       </a>
 
       <div class="header-actions">
-        <a href="/history.html" class="btn btn-secondary btn-sm" data-i18n="header.history">История</a>
+        <a href="history.html" class="btn btn-secondary btn-sm" data-i18n="header.history">История</a>
 
         <!-- Balance Widget (Standard) -->
         <div class="balance-popover-wrapper">
