--- a/public/index.html
+++ b/public/index.html
@@ -187,6 +187,7 @@
 
   <script src="js/i18n.js"></script>
   <script src="js/api.js"></script>
+  <script src="js/balance-widget.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
